<resources>
    <string name="app_name">TaskManager</string>
    <string name="task_name">Task name</string>
    <string name="yyyy_mm_dd">yyyy.mm.dd</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>
    <string name="prio_enum">Prio enum</string>
    <string name="progress">Progress (%)</string>
    <string name="percentage_of_done">Percentage of done</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="progress_in">Progress (in %)</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="date">Date</string>
    <string name="edit">EDIT</string>
    <string name="estimated_time">Estimated time</string>
    <string name="high_medium_low">HIGH;MEDIUM;LOW</string>
    <string name="task_to_do_in_this_week">Task to do in this week</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="share">SHARE</string>
</resources>