<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="9dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskNameTV"
            android:layout_width="362dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/task_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/yyyy_mm_dd"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_deadlineLabel"
            app:layout_constraintStart_toEndOf="@+id/tv_deadlineLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_deadlineLabel" />

        <TextView
            android:id="@+id/tv_deadlineLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/deadline"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/taskNameTV"
            app:layout_constraintTop_toBottomOf="@+id/taskNameTV" />


        <TextView
            android:id="@+id/tv_priorityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/priority"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_deadlineLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_deadline" />

        <TextView
            android:id="@+id/tv_priorityEnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/prio_enum"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_priorityLabel"
            app:layout_constraintStart_toEndOf="@+id/tv_priorityLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_priorityLabel" />

        <TextView
            android:id="@+id/tv_percentageOfDoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/progress"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_priorityLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_priorityEnum" />

        <TextView
            android:id="@+id/tv_percentageOfDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/percentage_of_done"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_percentageOfDoneLabel"
            app:layout_constraintStart_toEndOf="@+id/tv_percentageOfDoneLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_percentageOfDoneLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>